# rag_demo

./: # bubble_sort.py  .gitignore  README.md  hyde_search.drawio  load_env_variables.py  main.py  pyproject.toml  requirements.txt  settings.env
chromadb/: chroma.sqlite3
prompt_yaml/: hyde_custom_prompt.yaml  rag_custom_prompt.yaml
rag_demo/: document_loader.py  load_pdf.py  load_vectorstore.py  orchestration.py  prompt_templates.py  retrieval_from_chromadb.py  retrievals.py
static/: script.js  style.css
templates/: index.html
utils/: classes.py  constants.py  functions.py
