[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = ""
authors = ["Andrea Stefanachi <andrea.stefanachi@unbelievable-machine.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.7"
unstructured = "^0.11.2"
langchain = "^0.0.344"
python-dotenv = "^1.0.0"
chromadb = "^0.4.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
